--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -211,7 +211,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	overflow: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 body.body--hidden {
