--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -18,7 +18,7 @@
 	overflow-y: auto;
 	width: 100%;
 	height: 100%;
-	-webkit-overflow-scrolling: auto;
+	-webkit-overflow-scrolling: scroll;
 }
 
 .card__container--closed {
@@ -215,7 +215,7 @@ body {
 }
 
 body.body--hidden {
-	overflow: scroll;
+	overflow: hidden;
 }
 
 body.body--hidden .header {
