--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -18,12 +18,12 @@
 	overflow-y: auto;
 	width: 100%;
 	height: 100%;
-	-webkit-overflow-scrolling: scroll;
+	-webkit-overflow-scrolling: auto;
 }
 
 .card__container--closed {
 	position: absolute;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .card__image {
