--- a/css/modern-blog.css
+++ b/css/modern-blog.css
@@ -18,7 +18,7 @@
 	overflow-y: auto;
 	width: 100%;
 	height: 100%;
-	-webkit-overflow-scrolling: auto;
+	-webkit-overflow-scrolling: touch;
 }
 
 .card__container--closed {
